--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://fonts.cdnfonts.com/css/thumbs-down" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script defer src="app.js" charset="utf-8"></script>
     <title>Space Fighters</title>
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <h1>Space&nbsp;&nbsp;Fighters</h1>
+    </header>
     <section id="container">
 
     </section>
