added sound effects

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <header>
         <h1>Space&nbsp;&nbsp;Fighters</h1>
     </header>
+    <section>
+        <div id="counters">
+            <h3>Score: <span id="player-score">0</span></h3>
+            <h3>Hi-Score: <span id="hi-score">0</span></h3>
+        </div>
+    </section>
     <section id="container">
 
     </section>
