fixed various bugs, the game is in working conditions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://fonts.cdnfonts.com/css/thumbs-down" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script defer src="intro.js"></script>
+    <script defer src="index.js"></script>
     <title>Space Fighters Intro</title>
 </head>
 
