fixed a reset glitch were aliens go down 1 line instead of moving right first

--- a/space-fighters.html
+++ b/space-fighters.html
@@ -30,6 +30,10 @@
 
     <footer>
         <button id="restart-btn">Restart</button>
+        <h3 id="playInstructions">Press: &#x2190 and &#x2192 keys to
+            move&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Press: &#x2191 key to
+            shoot
+        </h3>
     </footer>
 </body>
 
